[package]
name = "coap-server"
version = "0.1.2"
description = "Robust async CoAP server"
authors = ["Josh Guilfoyle <jasta@devtcg.org>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jasta/coap-server-rs"
categories = ["network-programming"]
keywords = ["coap", "server", "async", "IoT"]
edition = "2021"

[dependencies]
tokio = { version = "1.31.0", features = ["rt", "macros", "net"] }
tokio-stream = "0.1.14"
tokio-util = { version = "0.7.8", features = ["codec", "net"] }
bytes = "1.4.0"
futures = "0.3.28"
async-trait = "0.1.73"
pin-project = "1.1.3"
dyn-clone = "1.0.12"
anyhow = "1.0.72"
thiserror = "1.0.44"
log = "0.4.20"
coap-lite = "0.11.3"
rand = "0.8.5"

[dev-dependencies]
async-stream = "0.3.5"
tokio = { version = "1.17.0", features = ["test-util", "rt-multi-thread"] }
env_logger = "0.10.0"
